prevent overflows from scrolling the page

--- a/tests/sample/style/style.css
+++ b/tests/sample/style/style.css
@@ -28,9 +28,9 @@
     font-style: normal;
 }
 
+html, body, .js-window-view { overflow: hidden; margin: 0; }
 body {
     background-color: black;
-    overflow: hidden;
     font-family: "source", verdana;
 }
 
